# flights-booking-app-cpp

./: CMakeLists.txt  submission.md
data/: default-config.txt
flights/: Flight.cpp  Flight.h  FlightsRepository.cpp  FlightsRepository.h
src/: main.cpp
src/flights/: Flight.cpp  FlightsRepository.cpp  FlightsRepository.h
src/tickets/: Ticket.cpp  TicketsApi.cpp  TicketsService.cpp
tickets/: Ticket.h  TicketsApi.cpp  TicketsApi.h  TicketsRepository.cpp  TicketsRepository.h  TicketsService.cpp  TicketsService.h
value-objects/: FlightIdentifier.h  Seat.h
